--- a/src/app/shedule-controller/shedule-item/shedule-item.component.html
+++ b/src/app/shedule-controller/shedule-item/shedule-item.component.html
@@ -1,8 +1,11 @@
-<article class="bg-light" [id]="sheduleItem.id">
-  <div class="date">{{sheduleItem.date | date:'EEEE, d MMMM y'}}</div>
+<article class="bg-light">
+  <div class="date">{{sheduleItem.date}}</div>
   <div class="name">{{sheduleItem.name}}</div>
   <div  class="sheduleItems col">
-    <div *ngFor="let time of sheduleItem.workTimes" class="row">
+    <div *ngFor="let time of sheduleItem.workTimes"
+         class="row"
+         (click)="timeClick($event)"
+    >
       {{time.toLocaleTimeString('ru-RU', {formatMatcher: 'basic'}) }}
     </div>
   </div>
