--- a/src/app/schedule-controller/schedule-controller.component.scss
+++ b/src/app/schedule-controller/schedule-controller.component.scss
@@ -1,10 +1,10 @@
-.shedule-container{
+.schedule-container{
   display: flex;
   justify-content: left;
   gap: 15px;
 }
 
-.shedule__item{
+.schedule__item{
   max-width: 320px;
   padding: 5px;
   border: 1px solid lightblue;
