--- a/src/app/schedule-controller/schedule-item/schedule-item.component.html
+++ b/src/app/schedule-controller/schedule-item/schedule-item.component.html
@@ -7,9 +7,10 @@
         {{item.name}}
       </div>
       <ng-template #showTime>
-        <div class="border-bottom open-time" (click)="regData.openForm(scheduleItem.id, scheduleItem.name, scheduleItem.date, item.time)">{{item.time}}</div>
+        <div class="border-bottom open-time"
+             (click)="regData.openForm(scheduleItem.id, scheduleItem.name, scheduleItem.date, item.time)"
+        >{{item.time}}</div>
       </ng-template>
     </li>
   </ul>
 </article>
-
