--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,8 +1,20 @@
-.right-menu{
-  max-width: 320px;
+.aside-menu{
+  max-width: 300px;
+}
+
+.schedule{
+  max-width: calc(100% - 300px);
+  flex-wrap: wrap;
 }
 
 .row{
   margin-left: 0px;
   margin-right: 10px;
+}
+
+@media screen and (max-width: 320px) {
+  .schedule{
+    max-width: 100%;
+    flex-direction: column;
+  }
 }
