--- a/src/app/schedule-controller/schedule-controller.component.scss
+++ b/src/app/schedule-controller/schedule-controller.component.scss
@@ -2,11 +2,26 @@
   display: flex;
   justify-content: left;
   gap: 15px;
+  max-width: 100%;
+  flex-wrap: wrap;
+
 }
 
 .schedule__item{
   width: 250px;
+  max-width: 250px;
   flex-grow: 1;
   padding: 5px;
   border: 1px solid lightblue;
+}
+
+@media screen and (max-width: 720px) {
+  .schedule-container{
+    justify-content: center;
+    gap: 5px;
+  }
+  .schedule__item{
+    width: 100%;
+    max-width: 100%;
+  }
 }
